[gd_scene load_steps=6 format=3 uid="uid://biqopfwyou2a2"]

[ext_resource type="Script" path="res://menu/mainMenu.gd" id="1_dpt0h"]

[sub_resource type="SystemFont" id="SystemFont_2ny1l"]

[sub_resource type="LabelSettings" id="LabelSettings_skega"]
font = SubResource("SystemFont_2ny1l")
font_size = 90
font_color = Color(0, 0.35, 1, 1)
outline_size = 10
outline_color = Color(0.44, 0.561333, 1, 1)
shadow_size = 20
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(5, 5)

[sub_resource type="InputEventAction" id="InputEventAction_ccb0n"]
action = &"ui_cancel"

[sub_resource type="Shortcut" id="Shortcut_ccoxb"]
events = [SubResource("InputEventAction_ccb0n")]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 1.0
offset_right = 2.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dpt0h")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.217, 0.24955, 0.31, 1)

[node name="Label" type="Label" parent="."]
custom_minimum_size = Vector2(0, 150)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -183.0
offset_right = 183.0
offset_bottom = 168.0
grow_horizontal = 2
text = "Parking is hard"
label_settings = SubResource("LabelSettings_skega")
horizontal_alignment = 2
vertical_alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(300, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -50.5
offset_right = 150.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
alignment = 2

[node name="PlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../QuitButton")
focus_neighbor_bottom = NodePath("../SelectLevelButton")
text = "Play"

[node name="SelectLevelButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../PlayButton")
focus_neighbor_bottom = NodePath("../SettingsButton")
text = "Select level"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../SelectLevelButton")
focus_neighbor_bottom = NodePath("../QuitButton")
text = "Settings and info"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../SettingsButton")
focus_neighbor_bottom = NodePath("../PlayButton")
shortcut = SubResource("Shortcut_ccoxb")
text = "Quit"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
visible = false
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SelectLevelButton" to="." method="_on_select_level_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
